overflow issue still

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ footer {
 	background-color:#f8f8f8;
 	padding: 30px;
 	border-radius: 8px;
-	max-height: fit-content;
+	height: 2000px;
 	overflow: auto;
 }
 
